Fixed outline for invisible hamburger menu

--- a/src/components/button.css
+++ b/src/components/button.css
@@ -68,6 +68,7 @@
 }
 
 .dcg-calculator-api-container .dcg-btn-invisible.dcg-focus-visible {
-  outline: 2px solid #8c29be;
+  /* outline: 2px solid #8c29be; */
+  outline: auto;
   outline-offset: 3px;
 }
